5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1670_2973.log
== TEST (2019-04-16 18:34:10) 
-- CODE:
pi=float(input("posiçao incial do travesti"))
v=float(input("velocidade da piroca"))
t=float(input("tempo de deslocamento"))
s=  pi + (v*t)
if (v<=100):
	menssagem="OK"
else:
	mensagem="ACIMA"
print(s)
print(menssagem)
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:34:31) 
-- CODE:
pinicial=float(input("posiçao incial do travesti"))
v=float(input("velocidade da piroca"))
t=float(input("tempo de deslocamento"))
s=  pi + (v*t)
if (v<=100):
	menssagem="OK"
else:
	mensagem="ACIMA"
print(s)
print(menssagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s=  pi + (v*t)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:25) 
-- CODE:
si= float(input("espaçp inicial da travesti"))
v=float(input("velocidade da piroca"))
t=float(input("tempo de deslocamento"))
s=  si + (v*t)
if (v<=100):
	menssagem="OK"
else:
	mensagem="ACIMA"
print(s)
print(menssagem)
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:33) 
-- CODE:
si= float(input("espaco inicial da travesti"))
v=float(input("velocidade da piroca"))
t=float(input("tempo de deslocamento"))
s=  si + (v*t)
if (v<=100):
	menssagem="OK"
else:
	mensagem="ACIMA"
print(s)
print(menssagem)
-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:37:20) 
-- CODE:
si= float(input("espaco inicial da travesti"))
v=float(input("velocidade da piroca"))
t=float(input("tempo de deslocamento"))
s=  si + (v*t)
if (v<=100):
	menssagem="OK"
	print(s)
else:
	mensagem="ACIMA"
	print(s)


-- OUTPUT:
7202.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:05) 
-- CODE:
si= float(input("espaco inicial da travesti"))
v=float(input("velocidade da piroca"))
t=float(input("tempo de deslocamento"))
s=  si + (v*t)
if (v<=100):
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")


-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:26) 
-- CODE:
si= int(input("espaco inicial da travesti"))
v=int(input("velocidade da piroca"))
t=int(input("tempo de deslocamento"))
s=  si + (v*t)
if (v<=100):
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")


-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:38:33) 
-- CODE:
si= int(input("espaco inicial da travesti"))
v=int(input("velocidade da piroca"))
t=int(input("tempo de deslocamento"))
s=  si + (v*t)
if (v<=100):
	print(s)
	print("OK")
else:
	print(s)
	print("ACIMA")


-- EXECUTION TIME:
0.222044
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
